<resources>
    <string name="app_name">Aperii</string>

    <string name="title_home">Home</string>
    <string name="title_discover">Discover</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_updater">Updater</string>

    <string name="username">\@%1$s</string>
    <string name="crash_title">A Crash Has Occurred</string>
    <string name="debug">Debug</string>

    <string name="coming_soon">Coming Soon!</string>

    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="label_username">Username</string>
    <string name="password">Password</string>
    <string name="back">Back</string>
    <string name="post">Post</string>
    <string name="new_post">New Post</string>
    <string name="filter">Filter</string>

    <string name="separated">\• %1$s</string>
    <string name="replyTo">Replying to @%1$s</string>

    <string name="updating">Updating…</string>
    <string name="new_update">New update is available!</string>
    <string name="version_change"><![CDATA[%1$s -> %2$s]]></string>
    <string name="update_now">Update Now</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="display_name">Display Name</string>
    <string name="bio">Bio</string>
    <string name="pronouns">Pronouns</string>
    <string name="save">Save</string>
    <string name="aperii_staff">Aperii Staff</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="welcome_subtitle">Glad you\'re sticking with us!</string>
    <string name="debug_enter_command">Enter Command</string>
    <string name="restart">Restart</string>
    <string name="send_report">Send Report</string>
    <string name="reload">Reload</string>
    <string name="login_error">Error logging you in</string>
    <string name="report_bug">Report a bug</string>
    <string name="language">Language</string>
    <string name="discord">Discord</string>
    <string name="experiments">Experiments</string>
    <string name="logout">Log Out</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="account_settings_description">View and manage account details</string>
    <string name="appearance">Appearance</string>
    <string name="appearance_settings_description">Change the look and feel of the app</string>
    <string name="app_info">Application Info</string>
    <string name="dev_settings">Developer Settings</string>
    <string name="dev_settings_description">Shhh… Don\'t tell anyone!</string>
    <string name="oss_licenses">Open Source Licenses</string>
    <string name="oss_licenses_description">License details for all open source libraries being used</string>

    <string name="copyright">© 2022 Aperii\n\n🤩 Twemoji - Copyright 2020 Twitter, Inc and other contributors\nGraphics licensed under CC-BY 4.0: https://creativecommons.org/licenses/by/4.0/</string>

</resources>