<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.aperii.views.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:elevation="4dp"
        app:title="@string/settings" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <com.aperii.views.settings.SettingsItemView
                android:id="@+id/settings_item_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:label="@string/account"
                app:description="@string/account_settings_description"
                app:icon="@drawable/ic_user_24dp"
                app:name=".widgets.settings.WidgetSettings" />

            <com.aperii.views.settings.SettingsItemView
                android:id="@+id/settings_item_appearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:label="@string/appearance"
                app:description="@string/appearance_settings_description"
                app:icon="@drawable/ic_theme_24px" />

            <com.aperii.views.settings.SettingsItemView
                android:id="@+id/settings_item_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:label="@string/app_info"
                app:icon="@drawable/ic_info_24dp"
                app:name=".widgets.settings.WidgetSettingsAppInfo" />

            <com.aperii.views.settings.SettingsItemView
                android:id="@+id/settings_item_developers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:label="@string/dev_settings"
                app:description="@string/dev_settings_description"
                app:icon="@drawable/ic_logo_24dp"
                app:name=".widgets.debugging.WidgetExperiments" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>