<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.aperii.widgets.home.WidgetHome"
        android:label="@string/title_home"
        tools:layout="@layout/widget_home" />

    <fragment
        android:id="@+id/navigation_discover"
        android:name="com.aperii.widgets.discover.WidgetDiscover"
        android:label="@string/title_discover"
        tools:layout="@layout/widget_discover" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.aperii.widgets.inbox.WidgetInbox"
        android:label="@string/title_notifications"
        tools:layout="@layout/widget_inbox" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.aperii.widgets.user.profile.WidgetProfile"
        android:label="@string/title_profile"
        tools:layout="@layout/widget_profile" />
</navigation>