<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <LinearLayout
        android:id="@+id/auth_login_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arial_black"
            android:text="Welcome back!"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Glad you're sticking with us!"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/auth_login_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/auth_login_header"
        android:padding="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_et_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_username">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@android:color/transparent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_et_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/password">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:backgroundTint="@android:color/transparent" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/error_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:visibility="gone">

            <ImageView
                android:id="@+id/error_icon"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/ic_error_24dp"
                app:tint="@android:color/holo_red_light" />

            <TextView
                android:id="@+id/error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textColor="@android:color/holo_red_light"
                android:text="Failed to login"/>

        </LinearLayout>



        <com.google.android.material.button.MaterialButton
            android:id="@+id/auth_button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/login"
            style="@style/Aperii_Button_Primary" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>